<resources>
    <string name="app_name">Tamwena</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">الصفحة الرئيسية</string>
    <string name="search_for_market">إبحث عن متجر</string>
    <string name="shopping_history">آخر المشتريات</string>
    <string name="my_account">البيانات الشخصيه</string>
    <string name="about_the_app">عن التطبيق</string>
    <string name="call_us">إتصل بنا</string>
    <string name="privacy_terms">سياسة الخصوصيه</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="next">التالى</string>
    <string name="finish">إنهاء</string>


    <string name="tab_text_1" translatable="false">المنتجات</string>
    <string name="tab_text_2" translatable="false"> عن المكان</string>
    <string name="tab_text_3" translatable="false">التقييم</string>
    <string name="tab_text_4" translatable="false"> تواصل معنا</string>
    <string name="title_activity_drawer2">DrawerActivity2</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="pay_for_order">شراء فاتورة</string>
</resources>