<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second_graph"
    android:label="second_graph"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.ar.gptamwena.ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_search_for_market"
        android:name="com.ar.gptamwena.ui.fragments.NearShopsFragment"
        android:label="@string/search_for_market"
        tools:layout="@layout/fragment_near_shops" />
    <fragment
        android:id="@+id/nav_shopping_history"
        android:name="com.ar.gptamwena.ui.fragments.ShoppingHistoryFragment"
        android:label="@string/shopping_history"
        tools:layout="@layout/fragment_shopping_history" />
    <fragment
        android:id="@+id/nav_my_account"
        android:name="com.ar.gptamwena.ui.fragments.MyAccountFragment"
        android:label="fragment_my_account"
        tools:layout="@layout/fragment_my_account" />
</navigation>